chassis/build/log/idf_py_stderr_output_1571044
/home/yuangod/project/workspace/yuangod_smart_car/components/softap_sta/campus_network.c: In function 'campus_network_http_post':
/home/yuangod/project/workspace/yuangod_smart_car/components/softap_sta/campus_network.c:23:26: error: 'can_http_event_handler' undeclared (first use in this function); did you mean 'http_event_handle_cb'?
   23 |         .event_handler = can_http_event_handler,
      |                          ^~~~~~~~~~~~~~~~~~~~~~
      |                          http_event_handle_cb
/home/yuangod/project/workspace/yuangod_smart_car/components/softap_sta/campus_network.c:23:26: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/softap_sta/CMakeFiles/__idf_softap_sta.dir/build.make:90：esp-idf/softap_sta/CMakeFiles/__idf_softap_sta.dir/campus_network.c.obj] 错误 1
make[1]: *** [CMakeFiles/Makefile2:5089：esp-idf/softap_sta/CMakeFiles/__idf_softap_sta.dir/all] 错误 2
make[1]: *** 正在等待未完成的任务....
make: *** [Makefile:136：all] 错误 2
